[package]
name = "coal-me"
version = "0.1.0"
authors = ["zjonn <zjonnn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-files = "*"
actix-identity = "*"
diesel = { version = "*", features = ["postgres"] }
dotenv = "*"
lazy_static = "*"
chrono = "*"