[package]
name = "coal-me"
version = "0.1.0"
authors = ["zjonn <zjonnn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-http = "^1.0.1"
actix-files = "^0.2.1"
actix-diesel = "^0.3.0"
actix-service = "^1.0.5"
actix-identity = "^0.2.1"

futures = "0.3.1"

diesel = { version = "*", features = ["postgres"] }

dotenv = "*"
lazy_static = "*"
chrono = "*"